--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "EscapeArea51.sln"
+    "dotnet.defaultSolution": "Game_FALL25.sln"
 }
